tests/errors/sem_assign5.java
public class sem_assign5 {
public static void main(String[] args){
String value  = 'L' ;
}
}